objects/Renewal_Uplift_Percent__mdt/Renewal_Uplift_Percent__mdt.object-meta.xml
<CustomObject>
    <label>Renewal Uplift Percent</label>
    <pluralLabel>Renewal Uplift Percent</pluralLabel>
</CustomObject>