objects/Renewal_Uplift_Percent__mdt/fields/Approval_Uplift_Percent__c.field-meta.xml
<CustomField>
    <fullName>Approval_Uplift_Percent__c</fullName>
    <label>Approval Uplift Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>