objects/Renewal_Uplift_Percent__mdt/fields/First_Renewal_Uplift__c.field-meta.xml
<CustomField>
    <fullName>First_Renewal_Uplift__c</fullName>
    <label>First Renewal Uplift</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>