objects/Renewal_Uplift_Percent__mdt/listViews/Segment_with.listView-meta.xml
<ListView>
    <fullName>Segment_with</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Uplift_Percent__c</columns>
    <columns>Approval_Uplift_Percent__c</columns>
    <columns>First_Renewal_Uplift__c</columns>
    <filterScope>Everything</filterScope>
    <label>Segment with %</label>
    <language>en_US</language>
</ListView>